# Prompta

./: Cargo.toml  README.md  WTF_I_BRAINSTORMED.md
src/: main.rs
src/indexer/: ignore.rs  metadata.rs  mod.rs  walker.rs
src/models/: file.rs  mod.rs  repository.rs
src/utils/: hash.rs  mod.rs
